syntax = "proto3";
package node;

import "google/protobuf/empty.proto";

message VmConfig {
    string vmID = 1;
    int32 memory = 2;
    int32 vcpus = 3;
    string kernel = 4;
    string kernel_params = 5;
    string network_mode = 6;
    string ip_address = 7;
    string mac_address= 8;
    repeated Drive drives = 9;
}

message Drive {
    string drive_id = 1;
    bool is_read_only = 2;
    bool is_root_device = 3;
    string path_on_host = 4;
}

enum Status {
    SUCCESS = 0;
    FAILURE = 1;
}

message Response {
    Status status = 1;
}

message VmResponse {
    Status status = 1;
    VmConfig config = 2;
}

message VmList {
    repeated string vmID = 1;
}

message VmID {
    string vmID = 1;
}

service Node {
    rpc StartVM(VmConfig) returns (VmConfig) {}
    rpc StopVM(VmID) returns (Response) {}
    rpc ListVms(google.protobuf.Empty) returns (VmList) {}
    rpc HealthCheck(google.protobuf.Empty) returns (Response) {}
}